--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "build:css": "npx tailwindcss -i ./src/style.css -o ./public/css/style.css --watch"
+    "build:css": "npx tailwindcss -i ./src/style.css -o ./public/css/style.css --watch",
+    "build": "npx tailwindcss -i ./src/style.css -o ./public/css/style.css --minify"
   },
   "dependencies": {
     "ejs": "^3.1.10",
